--- a/main.ipynb
+++ b/main.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "30943eea",
    "metadata": {},
    "outputs": [],
@@ -162,6 +162,11 @@
     "    best_info_gain = -9999\n",
     "    best_feature_index = None\n",
     "    best_feature_value = None\n",
+    "\n",
+    "    best_left_data = []\n",
+    "    best_right_data = []\n",
+    "\n",
+    "    best_value = None\n",
     "\n",
     "    entropy_complete_dataset = cal_entropy(dataset)\n",
     "\n",
@@ -201,10 +206,14 @@
     " \n",
     "            if information_gain > best_info_gain:\n",
     "                best_info_gain = information_gain\n",
-    "                best_feature_index = best_feature_index\n",
-    "                best_value = best_feature_value\n",
+    "                # best_feature_index = best_feature_index\n",
+    "                \n",
+    "                best_left_data = left_dataset\n",
+    "                best_right_data = right_dataset\n",
     "\n",
-    "    return best_info_gain, best_feature_index, best_feature_value"
+    "                best_value = split_value\n",
+    "\n",
+    "    return best_info_gain, best_feature_index, best_value, best_left_data, best_right_data"
    ]
   },
   {
@@ -262,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "bb98e124",
    "metadata": {},
    "outputs": [],
@@ -274,19 +283,83 @@
     "    if cal_entropy(dataset) == 0:\n",
     "        nique, counts = np.unique(clean_dataset[:,-1], return_counts=True)\n",
     "        leafNode = Node(isLeaf=True, prediction=counts[0])\n",
-    "        return leafNode\n",
+    "        return leafNode, depth\n",
     "    \n",
-    "    split = find_split(dataset)\n",
+    "    best_info_gain, best_feature_index, best_value, left_data, right_data = find_split(dataset)\n",
     "\n",
     "    # Best feature index \n",
     "    # best info gain\n",
     "    # best feature value\n",
-    "    node = Node()\n",
+    "    node = Node(splitValue=best_value)\n",
+    "    node.left, l_depth = decision_tree_learning(left_data, depth + 1)\n",
+    "    node.right, r_depth = decision_tree_learning(right_data, depth + 1)\n",
     "\n",
-    "# result = dict(zip(clean_dataset, counts))\n",
-    "print(len(nique))\n",
-    "print(counts)\n",
+    "    return (node, max(l_depth, r_depth))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # result = dict(zip(clean_dataset, counts))\n",
+    "# print(len(nique))\n",
+    "# print(counts)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fe31943",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'left': <__main__.Node object at 0x105bc4df0>, 'right': <__main__.Node object at 0x1072a8d60>, 'isLeaf': False, 'splitValue': -54.5, 'prediction': None}\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "node, depth = decision_tree_learning(clean_dataset, 0)\n",
+    "\n",
+    "print(vars(node))\n",
+    "print(depth)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2dd72afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to shuffle data indices and split values\n",
+    "\n",
+    "def kfold_datasets_generator(dataset):\n",
+    "    samples = dataset.shape[0]\n",
+    "    shuffled_indices = np.random.permutation(samples)\n",
+    "\n",
+    "    split_datasets = np.array_split(shuffled_indices, 10)\n",
+    "    print(len(split_datasets))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "6e8658f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "kfold_datasets_generator(clean_dataset)"
    ]
   }
  ],
