refactor: Change isLeaf from attribute to dynamic property

--- a/main.ipynb
+++ b/main.ipynb
@@ -229,16 +229,20 @@
     "# Our node class\n",
     "# Has left and right values which point to different nodes\n",
     "# The split value and attribute index mentions what value and which attribute index we are going to be splitting on\n",
-    "# If the node is a leaf, isLeaf would be true and prediction would return the prediction for that node\n",
+    "# If the node is a leaf, isLeaf would return true and prediction would return the prediction for that node\n",
     "class Node:\n",
     "  def __init__(self, left = None, right = None, splitValue = None, attributeIndex = None,\n",
-    "   isLeaf = False, prediction = None) -> None:\n",
+    "   prediction = None) -> None:\n",
     "    self.left = left\n",
     "    self.right = right\n",
     "    self.splitValue = splitValue\n",
     "    self.attributeIndex = attributeIndex\n",
-    "    self.isLeaf = isLeaf\n",
-    "    self.prediction = prediction"
+    "    self.prediction = prediction\n",
+    "\n",
+    "  @property\n",
+    "  def isLeaf(self) -> bool:\n",
+    "    # A node is a leaf if it has no left or right child\n",
+    "    return self.left is None and self.right is None"
    ]
   },
   {
@@ -253,7 +257,7 @@
     "     # if the data has all the same values, then we have a leaf node\n",
     "    unique_labels = np.unique(dataset[:,-1])\n",
     "    if len(unique_labels)==1:\n",
-    "        leafNode = Node(isLeaf=True, prediction=unique_labels[0])\n",
+    "        leafNode = Node(prediction=unique_labels[0])\n",
     "        return leafNode, depth\n",
     "\n",
     "    # otherwise, we get the best values for split, and create a new node\n",
@@ -825,6 +829,22 @@
     "datasets = kfold_datasets_generator(noisy_dataset)\n",
     "kfold_evaluator(datasets)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a6f851d-bb35-49b5-8c89-3d62baf840df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4ae405f-d62d-447e-954f-7aa0c643f76a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
