--- a/main.ipynb
+++ b/main.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "2dd72afe",
    "metadata": {},
    "outputs": [],
@@ -478,11 +478,11 @@
     "def kfold_datasets_generator(dataset):\n",
     "\n",
     "    working_data = dataset.copy()\n",
-    "    print(working_data.shape)\n",
+    "    # print(working_data.shape)\n",
     "    np.random.shuffle(working_data)\n",
     "    split_datasets = np.split(working_data, 10)\n",
-    "    print(len(split_datasets))\n",
-    "    print(split_datasets[0].shape)\n",
+    "    # print(len(split_datasets))\n",
+    "    # print(split_datasets[0].shape)\n",
     "\n",
     "    # Okay, now we have 10 datasets. We need to focus on training the tree on the first 9 and evaluate on the last 1\n",
     "\n",
@@ -525,24 +525,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "bab54356",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Assuming get_prediction and decision_tree_learning are defined elsewhere ---\n",
-    "# def get_prediction(node, test_row):\n",
-    "#     # ... your implementation ...\n",
-    "#     return np.array([1]) # Placeholder\n",
-    "#\n",
-    "# def decision_tree_learning(training_data, depth):\n",
-    "#     # ... your implementation ...\n",
-    "#     return object(), 0 # Placeholder\n",
-    "\n",
-    "\n",
     "def kfold_evaluator(datasets):\n",
     "\n",
-    "    # Initialize one total confusion matrix, as per the spec's hint\n",
+    "    # Initialize one total confusion matrix\n",
     "    # This will accumulate results from all folds.\n",
     "    total_confusion_matrix = np.zeros((4, 4), dtype=np.int64)\n",
     "    \n",
@@ -567,10 +557,10 @@
     "        # Add this fold's results to the total matrix\n",
     "        total_confusion_matrix += fold_confusion_matrix\n",
     "\n",
-    "        print(\"--- Fold Complete ---\")\n",
-    "        print(\"This fold's confusion matrix:\")\n",
-    "        print(fold_confusion_matrix)\n",
-    "        print(\"=\" * 30 + \"\\n\")\n",
+    "        # print(\"--- Fold Complete ---\")\n",
+    "        # print(\"This fold's confusion matrix:\")\n",
+    "        # print(fold_confusion_matrix)\n",
+    "        # print(\"=\" * 30 + \"\\n\")\n",
     "\n",
     "    # --- All Folds Complete ---\n",
     "    # Now, we derive all metrics *once* from the single total matrix,\n",
@@ -662,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "6e8658f2",
    "metadata": {},
    "outputs": [
@@ -670,120 +660,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2000, 8)\n",
-      "10\n",
-      "(200, 8)\n",
-      "--- Fold Complete ---\n",
-      "This fold's confusion matrix:\n",
-      "[[47  0  1  0]\n",
-      " [ 0 50  1  0]\n",
-      " [ 0  3 46  0]\n",
-      " [ 0  0  0 52]]\n",
-      "==============================\n",
-      "\n",
-      "--- Fold Complete ---\n",
-      "This fold's confusion matrix:\n",
-      "[[60  0  0  0]\n",
-      " [ 0 37  1  0]\n",
-      " [ 0  2 48  0]\n",
-      " [ 0  0  0 52]]\n",
-      "==============================\n",
-      "\n",
-      "--- Fold Complete ---\n",
-      "This fold's confusion matrix:\n",
-      "[[59  0  0  0]\n",
-      " [ 0 43  1  0]\n",
-      " [ 0  1 48  0]\n",
-      " [ 0  0  0 48]]\n",
-      "==============================\n",
-      "\n",
-      "--- Fold Complete ---\n",
-      "This fold's confusion matrix:\n",
-      "[[47  0  0  0]\n",
-      " [ 0 49  1  0]\n",
-      " [ 0  2 45  1]\n",
-      " [ 1  0  0 54]]\n",
-      "==============================\n",
-      "\n",
-      "--- Fold Complete ---\n",
-      "This fold's confusion matrix:\n",
-      "[[51  0  0  0]\n",
-      " [ 0 46  2  0]\n",
-      " [ 0  3 50  0]\n",
-      " [ 0  0  0 48]]\n",
-      "==============================\n",
-      "\n",
-      "--- Fold Complete ---\n",
-      "This fold's confusion matrix:\n",
-      "[[46  0  0  0]\n",
-      " [ 0 54  6  0]\n",
-      " [ 0  2 46  0]\n",
-      " [ 0  0  0 46]]\n",
-      "==============================\n",
-      "\n",
-      "--- Fold Complete ---\n",
-      "This fold's confusion matrix:\n",
-      "[[44  0  0  1]\n",
-      " [ 0 45  1  0]\n",
-      " [ 1  2 52  0]\n",
-      " [ 0  0  0 54]]\n",
-      "==============================\n",
-      "\n",
-      "--- Fold Complete ---\n",
-      "This fold's confusion matrix:\n",
-      "[[47  0  0  1]\n",
-      " [ 0 50  2  0]\n",
-      " [ 0  1 55  0]\n",
-      " [ 0  0  0 44]]\n",
-      "==============================\n",
-      "\n",
-      "--- Fold Complete ---\n",
-      "This fold's confusion matrix:\n",
-      "[[52  0  0  1]\n",
-      " [ 0 54  0  0]\n",
-      " [ 0  0 42  0]\n",
-      " [ 0  0  1 50]]\n",
-      "==============================\n",
-      "\n",
-      "--- Fold Complete ---\n",
-      "This fold's confusion matrix:\n",
-      "[[45  0  0  0]\n",
-      " [ 0 54  1  0]\n",
-      " [ 0  2 50  0]\n",
-      " [ 0  0  0 48]]\n",
-      "==============================\n",
-      "\n",
       "==============================\n",
       "--- FINAL AGGREGATE RESULTS ---\n",
       "Total (Summed) Confusion Matrix:\n",
-      "[[498   0   1   3]\n",
-      " [  0 482  16   0]\n",
-      " [  1  18 482   1]\n",
-      " [  1   0   1 496]]\n",
+      "[[493   0   2   5]\n",
+      " [  0 478  19   0]\n",
+      " [  3  22 477   1]\n",
+      " [  4   0   2 494]]\n",
       "==============================\n",
       "--- Per-Class Statistics (Derived from Total Matrix) ---\n",
       "Class 1:\n",
-      "  Precision:       0.9920\n",
-      "  Recall:          0.9960\n",
-      "  F1-Measure:      0.9940\n",
+      "  Precision:       0.9860\n",
+      "  Recall:          0.9860\n",
+      "  F1-Measure:      0.9860\n",
       "Class 2:\n",
-      "  Precision:       0.9679\n",
-      "  Recall:          0.9640\n",
-      "  F1-Measure:      0.9659\n",
+      "  Precision:       0.9618\n",
+      "  Recall:          0.9560\n",
+      "  F1-Measure:      0.9589\n",
       "Class 3:\n",
-      "  Precision:       0.9602\n",
-      "  Recall:          0.9640\n",
-      "  F1-Measure:      0.9621\n",
+      "  Precision:       0.9483\n",
+      "  Recall:          0.9540\n",
+      "  F1-Measure:      0.9511\n",
       "Class 4:\n",
-      "  Precision:       0.9960\n",
-      "  Recall:          0.9920\n",
-      "  F1-Measure:      0.9940\n",
+      "  Precision:       0.9880\n",
+      "  Recall:          0.9880\n",
+      "  F1-Measure:      0.9880\n",
       "------------------------------\n",
       "--- Overall Statistics (Derived from Total Matrix) ---\n",
-      "Overall Accuracy: 0.9790\n",
-      "Macro Average Precision: 0.9790\n",
-      "Macro Average Recall: 0.9790\n",
-      "Macro Average F1-Measure: 0.9790\n",
+      "Overall Accuracy: 0.9710\n",
+      "Macro Average Precision: 0.9710\n",
+      "Macro Average Recall: 0.9710\n",
+      "Macro Average F1-Measure: 0.9710\n",
       "==============================\n",
       "\n"
      ]
@@ -800,7 +707,10 @@
    "id": "9a6f851d-bb35-49b5-8c89-3d62baf840df",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datasets = kfold_datasets_generator(noisy_dataset)\n",
+    "kfold_evaluator(datasets)"
+   ]
   },
   {
    "cell_type": "code",
