chore: Convert atributes to snake_case

--- a/main.ipynb
+++ b/main.ipynb
@@ -249,47 +249,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 118,
    "id": "87e445e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Our node class\n",
-    "# Has left and right values which point to different nodes\n",
-    "# The split value and attribute index mentions what value and which attribute index we are going to be splitting on\n",
-    "# If the node is a leaf, isLeaf would return true and prediction would return the prediction for that node\n",
     "class Node:\n",
-    "  def __init__(self, left = None, right = None, splitValue = None, attributeIndex = None,\n",
-    "   prediction = None, majorityClass = None) -> None:\n",
+    "  def __init__(self, left = None, right = None, split_value = None, attribute_index = None,\n",
+    "   prediction = None, majority_class = None) -> None:\n",
+    "    \"\"\"\n",
+    "    Represents a node in a decision tree\n",
+    "    \n",
+    "    Has `left` and `right` values which point to different nodes\n",
+    "    The split value and attribute index mentions what value and which attribute index we are going to be splitting on\n",
+    "    If the node is a leaf, `is_leaf` would return `True` and `prediction` would return the prediction for that node\n",
+    "    When `prune()` is invoked the node becomes a leaf and `majority_class` is used to determine the the `prediction`\n",
+    "    \"\"\"\n",
     "    self.left = left\n",
     "    self.right = right\n",
-    "    self.splitValue = splitValue\n",
-    "    self.attributeIndex = attributeIndex\n",
+    "    self.split_value = split_value\n",
+    "    self.attribute_index = attribute_index\n",
     "    self.prediction = prediction\n",
-    "    self.majorityClass = majorityClass\n",
+    "    self.majority_class = majority_class\n",
     "\n",
     "    self.x = 0.0\n",
     "\n",
     "  @property\n",
-    "  def isLeaf(self) -> bool:\n",
+    "  def is_leaf(self) -> bool:\n",
     "    # A node is a leaf if it has no left or right child\n",
     "    return self.left is None and self.right is None\n",
     "\n",
     "  def prune(self):\n",
     "    \"\"\"\n",
     "    Turns this node into a leaf node by removing its children\n",
-    "    and setting its prediction to its majorityClass\n",
+    "    and setting its prediction to its majority_class\n",
     "    \"\"\"\n",
     "    # Set the prediction to the stored majority class\n",
-    "    self.prediction = self.majorityClass \n",
+    "    self.prediction = self.majority_class \n",
     "    \n",
-    "    # Remove children (this will make .isLeaf automatically return True)\n",
+    "    # Remove children (this will make .is_leaf automatically return True)\n",
     "    self.left = None\n",
     "    self.right = None\n",
     "\n",
     "    # Clear the split info since no longer relevant\n",
-    "    self.splitValue = None\n",
-    "    self.attributeIndex = None"
+    "    self.split_value = None\n",
+    "    self.attribute_index = None"
    ]
   },
   {
@@ -317,9 +321,9 @@
     "    # Best feature index \n",
     "    # best info gain\n",
     "    # best feature value\n",
-    "    node = Node(splitValue=best_value,\n",
-    "                attributeIndex=best_feature_index,\n",
-    "                majorityClass=majority_label_for_this_node)\n",
+    "    node = Node(split_value=best_value,\n",
+    "                attribute_index=best_feature_index,\n",
+    "                majority_class=majority_label_for_this_node)\n",
     "    \n",
     "    node.left, l_depth = decision_tree_learning(left_data, depth + 1)\n",
     "    node.right, r_depth = decision_tree_learning(right_data, depth + 1)\n",
@@ -357,7 +361,7 @@
     "    if node.right:\n",
     "        current_count = assign_leaf_x_coords(node.right, current_count)\n",
     "    #Check if leaf and assign coordinate\n",
-    "    if node.isLeaf:\n",
+    "    if node.is_leaf:\n",
     "        # This is a leaf - assign it the next x-coordinate using the counter\n",
     "        node.x = current_count\n",
     "        current_count = current_count+1\n",
@@ -366,7 +370,7 @@
     "    \n",
     "# Next for each parent node we assign x-coordinates by calculating midpoint, used post order traversal again.\n",
     "def assign_parent_x_coords(node):\n",
-    "    if node.isLeaf:\n",
+    "    if node.is_leaf:\n",
     "        # A leaf's x is already set. It is its own leftmost and rightmost point.\n",
     "        return node.x, node.x\n",
     "    else:\n",
@@ -409,12 +413,12 @@
     "    box_style = dict(boxstyle='round,pad=0.5', fc='w', lw=1)\n",
     "    fontsize = 10\n",
     "\n",
-    "    if node.isLeaf:\n",
+    "    if node.is_leaf:\n",
     "        node_text = f\"leaf:{node.prediction:.1f}\" \n",
     "        box_style['ec'] = 'g' # Green box for leaves\n",
     "        ax.text(node.x, y, node_text, ha='center', va='center', bbox=box_style, color='g', fontsize=fontsize)\n",
     "    else:\n",
-    "        node_text = f\"[X{node.attributeIndex} < {node.splitValue:.1f}]\"\n",
+    "        node_text = f\"[X{node.attribute_index} < {node.split_value:.1f}]\"\n",
     "        box_style['ec'] = 'b' # Blue box for decisions\n",
     "        ax.text(node.x, y, node_text, ha='center', va='center', bbox=box_style, color='b', fontsize=fontsize)\n",
     "        \n",
@@ -536,9 +540,9 @@
     "def get_prediction(node: Node, input):\n",
     "\n",
     "    # given an input of size (1, 8), we follow the decision tree, and return the final predicted value\n",
-    "    val = node.splitValue\n",
-    "    index = node.attributeIndex\n",
-    "    if node.isLeaf:\n",
+    "    val = node.split_value\n",
+    "    index = node.attribute_index\n",
+    "    if node.is_leaf:\n",
     "        return node.prediction\n",
     "    if input[index] <= val:\n",
     "        return get_prediction(node.left, input)\n",
@@ -790,14 +794,14 @@
     "        return errors\n",
     "\n",
     "    # Leaves should not be pruned by default\n",
-    "    if node.isLeaf:\n",
+    "    if node.is_leaf:\n",
     "        return []\n",
     "\n",
     "    # If both children are leaves we have found a candidate!\n",
-    "    if node.left.isLeaf and node.right.isLeaf:\n",
+    "    if node.left.is_leaf and node.right.is_leaf:\n",
     "\n",
     "        # Create pruned node and calculate error on it\n",
-    "        pruned_node = Node(prediction = node.majorityClass)\n",
+    "        pruned_node = Node(prediction = node.majority_class)\n",
     "        error_of_pruned = calculate_error_on_subtree(pruned_node, validation_subset)\n",
     "\n",
     "        # Calculate error on unpruned node\n",
@@ -813,7 +817,7 @@
     "    right_data_list = []\n",
     "    \n",
     "    for row in validation_subset:\n",
-    "        if row[node.attributeIndex] <= node.splitValue:\n",
+    "        if row[node.attribute_index] <= node.split_value:\n",
     "            left_data_list.append(row)\n",
     "        else:\n",
     "            right_data_list.append(row)\n",
