fix: create inner loop for pruning validation

--- a/main.ipynb
+++ b/main.ipynb
@@ -501,33 +501,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function to shuffle data indices and split values\n",
-    "def kfold_datasets_generator(dataset):\n",
+    "def kfold_datasets_generator(dataset, number_of_folds=10):\n",
+    "    \"\"\"\n",
+    "    Simply devides the dataset into k folds with 10 being the default value\n",
+    "    \"\"\"\n",
     "\n",
     "    working_data = dataset.copy()\n",
     "    # print(working_data.shape)\n",
     "    np.random.shuffle(working_data)\n",
-    "    split_datasets = np.split(working_data, 10)\n",
+    "    split_datasets = np.split(working_data, number_of_folds)\n",
     "    # print(len(split_datasets))\n",
     "    # print(split_datasets[0].shape)\n",
     "\n",
-    "    # Okay, now we have 10 datasets. We need to focus on training the tree on the first 9 and evaluate on the last 1\n",
-    "\n",
-    "    l = []\n",
-    "    for i in range(len(split_datasets)):\n",
-    "        # The ith set will be the testing set, the rest will be the training set\n",
-    "        testing_set = split_datasets[i]\n",
-    "        training_set = split_datasets[:i] + split_datasets[i + 1:]\n",
-    "\n",
-    "        training_set = np.concatenate((training_set), axis = 0)\n",
-    "\n",
-    "        d = {'testing': testing_set, 'training': training_set}\n",
-    "        l.append(d)\n",
-    "    \n",
-    "    # this function returns a list of 10 dictionaries, with each dictionary having a 'training' and 'testing' key\n",
-    "    # the keys point to their respective training and testing dataset\n",
-    "    \n",
-    "    return l"
+    "    return split_datasets"
    ]
   },
   {
@@ -552,65 +538,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "id": "c223cf75-17dd-4683-ace6-99841fce2294",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_tree_performance(tree, test_set):\n",
+    "    \"\"\"\n",
+    "    This function evaluates a single tree on a test set\n",
+    "    and returns the confusion matrix\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Create a confusion matrix just for this *single* fold\n",
+    "    confusion_matrix = np.zeros((4, 4), dtype=int)\n",
+    "\n",
+    "    # for every row in the testing data, we get a predicted and actual value\n",
+    "    for row in test_set:\n",
+    "        predicted = get_prediction(tree, row)\n",
+    "        actual = row[-1]\n",
+    "        predicted = predicted.astype(np.int64)\n",
+    "        actual = actual.astype(np.int64)\n",
+    "        \n",
+    "        # -1 because classes are 1-4 but indices are 0-3\n",
+    "        confusion_matrix[predicted - 1][actual - 1] += 1\n",
+    "            \n",
+    "    return confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "eb7af93d-7642-4eab-8541-12cae9e2a4e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tree_depth(node):\n",
+    "    \"\"\"\n",
+    "    Recursively calculates the  depth of a given tree\n",
+    "    \"\"\"\n",
+    "    # A leaf has depth 0\n",
+    "    if node.is_leaf:\n",
+    "        return 0\n",
+    "    \n",
+    "    # Recursively find depth of children\n",
+    "    left_depth = 0\n",
+    "    if node.left:\n",
+    "        left_depth = get_tree_depth(node.left)\n",
+    "        \n",
+    "    right_depth = 0\n",
+    "    if node.right:\n",
+    "        right_depth = get_tree_depth(node.right)\n",
+    "        \n",
+    "    # Depth is 1 + the deeper of its two children\n",
+    "    return 1 + max(left_depth, right_depth)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "bab54356",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def kfold_evaluator(datasets, prune = False):\n",
+    "def kfold_evaluator(all_folds, prune = False):\n",
+    "    num_of_folds = len(all_folds)\n",
     "\n",
     "    # Initialize one total confusion matrix\n",
     "    # This will accumulate results from all folds.\n",
     "    total_confusion_matrix = np.zeros((4, 4), dtype=np.int64)\n",
+    "\n",
+    "    all_depths = []\n",
     "    \n",
-    "    \n",
-    "    for i in datasets:\n",
+    "    for i in range(num_of_folds):\n",
     "        \n",
-    "        training_data = i['training']\n",
+    "        outer_training_folds = all_folds[:i] + all_folds[i+1:]\n",
+    "        test_set = all_folds[i]\n",
     "\n",
     "        node = None # This will hold the final tree whether we prune or not\n",
     "        \n",
     "        if prune:\n",
-    "            # We need to split training_data into train/validation\n",
-    "            # Make a copy and shuffle the copy\n",
-    "            temp_train_data = training_data.copy()\n",
-    "            np.random.shuffle(temp_train_data)\n",
-    "            \n",
-    "            # Set asside one more fold for us to use as the validation set\n",
-    "            inner_split_point = len(i['testing'])\n",
-    "            inner_validation_set = temp_train_data[:inner_split_point]\n",
-    "            inner_training_set = temp_train_data[inner_split_point:]\n",
-    "            \n",
-    "            # Train on the inner training set\n",
-    "            inner_node, depth = decision_tree_learning(inner_training_set, 0)\n",
-    "            # Prune using validation set\n",
-    "            node = prune_tree(inner_node, inner_validation_set) # 'node' is now the pruned tree\n",
+    "            num_inner_folds = len(outer_training_folds)\n",
+    "\n",
+    "            for j in range(num_inner_folds):\n",
+    "                # Set asside one more fold for us to use as the validation set\n",
+    "                inner_validation_set = outer_training_folds[j]\n",
+    "\n",
+    "                # Assemble inner training set with remaining data\n",
+    "                inner_training_folds = outer_training_folds[:j] + outer_training_folds[j+1:]\n",
+    "                inner_training_set = np.concatenate((inner_training_folds), axis=0)\n",
+    "\n",
+    "                # Train \n",
+    "                node, _ = decision_tree_learning(inner_training_set, 0)\n",
+    "                \n",
+    "                # Run pruning\n",
+    "                pruned_tree = prune_tree(node, inner_validation_set)\n",
+    "\n",
+    "                # Calculate and store the depth of the pruned tree \n",
+    "                pruned_depth = get_tree_depth(pruned_tree)\n",
+    "                all_depths.append(pruned_depth)\n",
+    "                \n",
+    "                # Run the evaluation on test data\n",
+    "                inner_fold_confusion_matrix = evaluate_tree_performance(pruned_tree, test_set)\n",
+    "                \n",
+    "                # Store results\n",
+    "                total_confusion_matrix += inner_fold_confusion_matrix\n",
     "            \n",
     "        else:\n",
-    "            # Train on the full  training set\n",
-    "            node, depth = decision_tree_learning(training_data, 0) # 'node' is the unpruned tree\n",
-    "\n",
-    "\n",
-    "        # Create a confusion matrix just for this *single* fold\n",
-    "        fold_confusion_matrix = np.zeros((4, 4), dtype=np.int64)\n",
-    "\n",
-    "        # for every row in the testing data, we get a predicted and actual value\n",
-    "        for j in range(len(i['testing'])):\n",
-    "            predicted = get_prediction(node, i['testing'][j])\n",
-    "            actual = i['testing'][j][-1]\n",
-    "            predicted = predicted.astype(np.int64)\n",
-    "            actual = actual.astype(np.int64)\n",
+    "            # Since we will not prune we use the full  training set\n",
+    "            outer_training_set = np.concatenate(outer_training_folds, axis=0)\n",
     "            \n",
-    "            # -1 because classes are 1-4 but indices are 0-3\n",
-    "            fold_confusion_matrix[predicted - 1][actual - 1] += 1\n",
-    "        \n",
-    "        # Add this fold's results to the total matrix\n",
-    "        total_confusion_matrix += fold_confusion_matrix\n",
-    "\n",
-    "        # print(\"--- Fold Complete ---\")\n",
-    "        # print(\"This fold's confusion matrix:\")\n",
-    "        # print(fold_confusion_matrix)\n",
-    "        # print(\"=\" * 30 + \"\\n\")\n",
+    "            node, depth = decision_tree_learning(outer_training_set, 0) # 'node' is the unpruned tree\n",
+    "            all_depths.append(depth)\n",
+    "            \n",
+    "            # Run the evaluation on test data\n",
+    "            fold_confusion_matrix = evaluate_tree_performance(node, test_set)\n",
+    "            \n",
+    "            # Add this fold's results to the total matrix\n",
+    "            total_confusion_matrix += fold_confusion_matrix\n",
     "\n",
     "    # --- All Folds Complete ---\n",
     "    # Now, we derive all metrics *once* from the single total matrix,\n",
@@ -692,6 +736,8 @@
     "        overall_accuracy = total_correct / total_samples\n",
     "        \n",
     "    print(f\"Overall Accuracy: {overall_accuracy:.4f}\")\n",
+    "\n",
+    "    print(f\"Average Tree Depth: {np.mean(all_depths):.2f}\")\n",
     "    \n",
     "    # These are the \"Macro Averages\" of the per-class scores\n",
     "    print(f\"Macro Average Precision: {np.mean(precision_scores):.4f}\")\n",
@@ -903,7 +949,7 @@
    ],
    "source": [
     "datasets = kfold_datasets_generator(clean_dataset)\n",
-    "kfold_evaluator(datasets_clean, prune=True)"
+    "kfold_evaluator(datasets, prune=True)"
    ]
   },
   {
