add readme and requirements

--- a/main.ipynb
+++ b/main.ipynb
@@ -39,104 +39,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a74bec86",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2000, 8)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(clean_dataset.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "68a0d43e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2000, 8)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(noisy_dataset.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "c657f244",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-61. -60. -68. -62. -77. -90. -80.   1.]\n",
-      " [-63. -65. -60. -63. -77. -81. -87.   1.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(clean_dataset[1:5][2:4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a03f2f42",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 2., 3., 4.])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.unique(clean_dataset[:, -1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "707a30c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "[500 500 500 500]\n"
-     ]
-    }
-   ],
-   "source": [
-    "nique, counts = np.unique(clean_dataset[:,-1], return_counts=True)\n",
-    "# result = dict(zip(clean_dataset, counts))\n",
-    "print(len(nique))\n",
-    "print(counts)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4f7fd2c7",
    "metadata": {},
@@ -249,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "87e445e3",
    "metadata": {},
    "outputs": [],
@@ -260,10 +162,10 @@
     "    \"\"\"\n",
     "    Represents a node in a decision tree\n",
     "    \n",
-    "    Has `left` and `right` values which point to different nodes\n",
+    "    Has 'left' and 'right' values which point to different nodes\n",
     "    The split value and attribute index mentions what value and which attribute index we are going to be splitting on\n",
-    "    If the node is a leaf, `is_leaf` would return `True` and `prediction` would return the prediction for that node\n",
-    "    When `prune()` is invoked the node becomes a leaf and `majority_class` is used to determine the the `prediction`\n",
+    "    If the node is a leaf, 'is_leaf' would return 'True' and 'prediction' would return the prediction for that node\n",
+    "    When 'prune()' is invoked the node becomes a leaf and 'majority_class' is used to determine the the 'prediction'\n",
     "    \"\"\"\n",
     "    self.left = left\n",
     "    self.right = right\n",
@@ -343,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2dc69527",
    "metadata": {},
    "outputs": [],
@@ -362,7 +264,7 @@
     "        current_count = assign_leaf_x_coords(node.right, current_count)\n",
     "    #Check if leaf and assign coordinate\n",
     "    if node.is_leaf:\n",
-    "        # This is a leaf - assign it the next x-coordinate using the counter\n",
+    "        # This is a leaf so we assign it the next x-coordinate using the counter\n",
     "        node.x = current_count\n",
     "        current_count = current_count+1\n",
     "    \n",
@@ -489,14 +391,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cad4e82b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
    "id": "2dd72afe",
    "metadata": {},
    "outputs": [],
@@ -507,11 +401,8 @@
     "    \"\"\"\n",
     "\n",
     "    working_data = dataset.copy()\n",
-    "    # print(working_data.shape)\n",
     "    np.random.shuffle(working_data)\n",
     "    split_datasets = np.split(working_data, number_of_folds)\n",
-    "    # print(len(split_datasets))\n",
-    "    # print(split_datasets[0].shape)\n",
     "\n",
     "    return split_datasets"
    ]
@@ -538,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "c223cf75-17dd-4683-ace6-99841fce2294",
    "metadata": {},
    "outputs": [],
@@ -549,7 +440,7 @@
     "    and returns the confusion matrix\n",
     "    \"\"\"\n",
     "\n",
-    "    # Create a confusion matrix just for this *single* fold\n",
+    "    # Create a confusion matrix just for this single fold\n",
     "    confusion_matrix = np.zeros((4, 4), dtype=int)\n",
     "\n",
     "    # for every row in the testing data, we get a predicted and actual value\n",
@@ -656,8 +547,8 @@
     "            # Add this fold's results to the total matrix\n",
     "            total_confusion_matrix += fold_confusion_matrix\n",
     "\n",
-    "    # --- All Folds Complete ---\n",
-    "    # Now, we derive all metrics *once* from the single total matrix,\n",
+    "    # All Folds Complete\n",
+    "    # Now, we derive all of the metrics at once from the single total matrix,\n",
     "    # as per the spec's hints.\n",
     "\n",
     "    print(\"=\" * 30)\n",
@@ -666,7 +557,7 @@
     "    print(total_confusion_matrix)\n",
     "    print(\"=\" * 30)\n",
     "\n",
-    "    # --- Integrated Statistics Calculation (from Total Matrix) ---\n",
+    "    # Statistics Calculation from Total Matrix\n",
     "    \n",
     "    print(\"--- Per-Class Statistics (Derived from Total Matrix) ---\")\n",
     "    \n",
@@ -674,7 +565,7 @@
     "    recall_scores = []\n",
     "    f1_scores = []\n",
     "\n",
-    "    for k in range(4): # Use 'k' to avoid shadowing the outer 'i'\n",
+    "    for k in range(4):\n",
     "        class_name = f\"Class {k+1}\"\n",
     "\n",
     "        # True Positives: Correctly predicted for this class\n",
@@ -688,7 +579,7 @@
     "        # Sum of column 'k', minus the TP\n",
     "        false_negatives = np.sum(total_confusion_matrix[:, k]) - true_positives\n",
     "\n",
-    "        # --- Calculate Precision ---\n",
+    "        # Precision\n",
     "        # TP / (TP + FP)\n",
     "        precision_denominator = (true_positives + false_positives)\n",
     "        if precision_denominator == 0:\n",
@@ -698,7 +589,7 @@
     "        \n",
     "        precision_scores.append(precision)\n",
     "\n",
-    "        # --- Calculate Recall ---\n",
+    "        # Recall\n",
     "        # TP / (TP + FN)\n",
     "        recall_denominator = (true_positives + false_negatives)\n",
     "        if recall_denominator == 0:\n",
@@ -708,7 +599,7 @@
     "        \n",
     "        recall_scores.append(recall)\n",
     "\n",
-    "        # --- Calculate F1-Measure (as required by spec) ---\n",
+    "        # F1 Measure\n",
     "        # 2 * (Precision * Recall) / (Precision + Recall)\n",
     "        f1_denominator = (precision + recall)\n",
     "        if f1_denominator == 0:\n",
@@ -1016,7 +907,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "redditEnv",
+   "display_name": "sentistocks2",
    "language": "python",
    "name": "python3"
   },
@@ -1030,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
